# ERICA

./:   .pub  .gitattributes  .gitignore  CLAUDE.md  EMPTY_CLUSTER_FIX_SUMMARY.md  GEMINI.md  GITHUB_SETUP.md  GaussMix4_MeanShift_diagCovar_baseVariance_1_Siamak_Unam_1.ipynb  K_STAR_IMPLEMENTATION.md  LIBRARY_GUIDE.md  MANIFEST.in  PROJECT_OVERVIEW.md  PYPI_GUIDE.md  README.md  Siamak_example.py  TODO.md  erica_results.json  pyproject.toml  requirements.txt  samples_original_1.csv  setup.py
.github/workflows/: publish.yml  test.yml
Datasets/: MAINZ_3_SV.csv  TRANS_3_SV.csv  VDX_3_SV.csv
Experiments/: KMeans_full_dataset_centroids_L2_and_Mahalanobis_4.ipynb
demo/: README.md  gradio_demo.py  test_demo.py
docs/: API_REFERENCE.md  GETTING_STARTED.md  MCSS_ALGORITHMS.md  METHODOLOGY.md  METRICS_GUIDE.md  README.md
docs/development/: AGENTS.md  COLAB_INSTRUCTIONS.md  (+6 more)
erica/: __init__.py  clustering.py  core.py  data.py  metrics.py  plotting.py  plotting_mpl.py  utils.py
erica_output/: ReadMe_output_files_saved_here
examples/: 02_vdx_analysis.py  03_k_star_selection.py  04_advanced_usage.py  05_parmigiani_metrics.py  06_hdbscan.py  GRADIO_README.md  GRADIO_SUMMARY.md  README.md  advanced_usage.py  basic_usage.py  gradio_app.py  k_star_example.py
fixes/: csv_orientation_detection.md  empty_cluster_handling.md
plotting_experiments/: 01_generate_datasets.py  02_run_erica_pipeline.py  03_clam_heatmaps.py  04_stability_strips.py  05_metrics_curves.py  06_method_comparison.py  07_surfaces.py  08_cluster_scatter.py  09_k_progression.py  10_full_k_progression.py  11_generate_all_plots.py  12_assignment_profiles.py  2026-03-30-erica-statistic-playground.html  2026-03-30-gallery.html  2026-03-30-playground.html  2026-04-14-vdx-gaussian-gallery.curated.html  2026-04-14-vdx-gaussian-gallery.html  2026-04-26-metric-scope-decision.md  DATA_DOCUMENTATION.md  LITERATURE_FIGURE_SURVEY.md  Makefile  PLOTTING_GUIDE.md  README.md  README_vdx_full.md  WHAT_WE_DID.md  clam_matrix_sort_18a.m  curate.py  e2e_test.ipynb  e2e_test.py  end_to_end_demo.ipynb  end_to_end_demo.py  gallery.html  metrics_table.tsv  style.py
scripts/: bump_version.py  colab_setup.py
tests/: README.md  __init__.py  test_erica.py
(+166 files in other folders)
